# stellar-core

./: .travis.yml  COPYING  INSTALL.md  ci-build.sh  configure.ac
.devcontainer/: Dockerfile
.github/workflows/: build.yml
Builds/VisualStudio/: stellar-core.vcxproj  stellar-core.vcxproj.filters
docs/: metrics.md  stellar-core_example.cfg
lib/: binaryfusefilter.h
lib/sqlite/: carray.c
lib/util/: cbitset.c  cbitset.h  siphash.cpp  siphash.h
scripts/: Dockerfile.testing  process-asio-trace.cpp
src/: Makefile.am
src/bucket/: Bucket.cpp  Bucket.h  BucketApplicator.cpp  BucketApplicator.h  BucketBase.cpp  BucketBase.h  BucketIndex.h  BucketIndexImpl.cpp  BucketIndexImpl.h  BucketInputIterator.cpp  BucketInputIterator.h  BucketList.cpp  BucketList.h  BucketManager.h  BucketManagerImpl.cpp  BucketManagerImpl.h  BucketOutputIterator.cpp  BucketOutputIterator.h  BucketSnapshot.cpp  BucketSnapshot.h  BucketTests.cpp  BucketTests.h  FutureBucket.cpp  FutureBucket.h  LedgerCmp.h  SearchableBucketList.cpp  SearchableBucketList.h
src/bucket/test/: BucketListTests.cpp  BucketManagerTests.cpp  BucketTests.cpp
src/catchup/: DownloadApplyTxsWork.cpp
src/crypto/: ShortHash.cpp  ShortHash.h
src/database/: Database.cpp  Database.h  DatabaseConnectionString.cpp
src/herder/: HerderImpl.cpp  HerderImpl.h  PendingEnvelopes.cpp  TransactionQueue.cpp  TxSetFrame.cpp
src/herder/test/: HerderTests.cpp  TransactionQueueTests.cpp  TxSetTests.cpp  UpgradesTests.cpp
src/history/: HistoryManagerImpl.cpp  HistoryTestsUtils.cpp  InferredQuorum.cpp  InferredQuorum.h  InferredQuorumUtils.cpp
src/history/test/: HistoryTestsUtils.cpp  HistoryTestsUtils.h  InferredQuorumTests.cpp  SerializeTests.cpp
src/historywork/: FetchRecentQsetsWork.cpp
src/invariant/: AccountSubEntriesCountIsValid.cpp  BucketListIsConsistentWithDatabase.cpp  BucketListIsConsistentWithDatabaseTests.cpp  ConservationOfLumens.cpp  LedgerEntryIsValid.cpp  LedgerEntryIsValid.h  SponsorshipCountIsValid.cpp
src/invariant/test/: BucketListIsConsistentWithDatabaseTests.cpp
src/ledger/: ConcurrentTxPartition.cpp  ConcurrentTxPartition.h  InMemoryLedgerTxnRoot.cpp  InMemoryLedgerTxnRoot.h  LedgerCloseMetaStream.cpp  LedgerCloseMetaStream.h  LedgerHashUtils.h  LedgerManager.h  LedgerManagerImpl.cpp  LedgerManagerImpl.h  LedgerTests.cpp  LedgerTxn.cpp  LedgerTxn.h  LedgerTxnAccountSQL.cpp  LedgerTxnConfigSQL.cpp  LedgerTxnContractCodeSQL.cpp  LedgerTxnContractDataSQL.cpp  LedgerTxnDataSQL.cpp  LedgerTxnImpl.h  LedgerTxnOfferSQL.cpp  LedgerTxnTrustLineSQL.cpp  SharedModuleCacheCompiler.cpp  SharedModuleCacheCompiler.h
src/ledger/test/: LedgerCloseMetaStreamTests.cpp  LedgerManagerTests.cpp
src/main/: Application.cpp  Application.h  ApplicationImpl.cpp  ApplicationImpl.h  ApplicationUtils.cpp  ApplicationUtils.h  CommandHandler.cpp  CommandLine.cpp  Config.cpp  Config.h  ExternalQueue.cpp  Maintainer.cpp  PersistentState.cpp  PersistentState.h  main.cpp
src/main/test/: ApplicationUtilsTests.cpp  ConfigTests.cpp
src/overlay/: Floodgate.cpp  Floodgate.h  LoadManager.cpp  LoopbackPeer.cpp  OverlayManager.h  OverlayManagerImpl.cpp  OverlayManagerImpl.h  OverlayMetrics.cpp  OverlayMetrics.h  Peer.cpp  Peer.h  SurveyManager.cpp  TCPPeer.cpp  TCPPeer.h
src/overlay/test/: LoopbackPeer.cpp
src/process/: ProcessManager.h  ProcessManagerImpl.cpp  ProcessManagerImpl.h
src/protocol-next/xdr/: Stellar-contract.x  Stellar-ledger-entries.x  Stellar-transaction.x
src/rust/: Cargo.toml
src/rust/crates/soroban_p21/: Cargo.toml
src/rust/crates/soroban_p22/: Cargo.toml
src/rust/soroban-host-crates/p21/: Cargo.toml
src/rust/soroban-host-crates/p22/: Cargo.toml
src/rust/src/: contract.rs  lib.rs
src/rust/src/dep-trees/: p21-expect.txt  p22-expect.txt
src/scp/: QuorumIntersectionChecker.cpp  QuorumIntersectionChecker.h  QuorumSetUtils.cpp  QuorumSetUtils.h  Slot.cpp  Slot.h
src/scp/test/: QuorumIntersectionTests.cpp
src/simulation/: CoreTests.cpp
src/test/: FuzzerImpl.cpp  TestUtils.cpp  TestUtils.h  TxTests.cpp  test.cpp  test.h
src/transactions/: AllowTrustOpFrame.cpp  AllowTrustOpFrame.h  ContractHostTypes.cpp  ContractHostTypes.h  CreateContractOpFrame.cpp  CreateContractOpFrame.h  ExtendFootprintTTLOpFrame.cpp  FeeBumpTransactionFrame.cpp  FeeBumpTransactionFrame.h  InvokeHostFunctionOpFrame.cpp  LiquidityPoolDepositOpFrame.cpp  LiquidityPoolDepositOpFrame.h  LiquidityPoolWithdrawOpFrame.cpp  LiquidityPoolWithdrawOpFrame.h  ManageOfferOpFrameBase.cpp  ManageOfferOpFrameBase.h  OfferExchange.cpp  OfferExchange.h  OperationFrame.cpp  OperationFrame.h  ParallelApplyUtils.h  PathPaymentOpFrameBase.cpp  PathPaymentOpFrameBase.h  PathPaymentStrictReceiveCache.cpp  PathPaymentStrictReceiveCache.h  PathPaymentStrictReceiveOpFrame.cpp  PathPaymentStrictReceiveOpFrame.h  PathPaymentStrictSendOpFrame.cpp  PathPaymentStrictSendOpFrame.h  RestoreFootprintOpFrame.cpp  RevokeSponsorshipOpFrame.cpp  SetTrustLineFlagsOpFrame.cpp  SetTrustLineFlagsOpFrame.h  SponsorshipUtils.cpp  TransactionBridge.cpp  TransactionBridge.h  TransactionFrame.cpp  TransactionFrame.h  TransactionFrameBase.cpp  TransactionFrameBase.h  (+2 more)
src/transactions/contracts/: ContractUtils.cpp  ContractUtils.h
src/transactions/test/: ContractTests.cpp  InflationTests.cpp  InvokeContractTests.cpp  OfferTests.cpp  PaymentTests.cpp  TxEnvelopeTests.cpp
src/transactions/test/wasm-as/: Makefile  test_invoke_contract.ts  test_invoke_contract.wasm
src/transactions/test/wasm-as/stellar/: hostfns.ts  index.ts  val.ts
src/transactions/test/wasm-rust/stellar_contract_sdk/src/: host_fns.rs  lib.rs  map.rs
src/util/: AsioHandlerTracking.cpp  AsioHandlerTracking.h  BitSet.h  GlobalChecks.cpp  GlobalChecks.h  LocalStream.cpp  LocalStream.h  RandomEvictionCache.h  Scheduler.cpp  Scheduler.h  Thread.cpp  Thread.h  Timer.cpp  Timer.h  XDROperators.h  XDRStream.h  asio.h  types.cpp
src/util/test/: BitSetTests.cpp  MetricTests.cpp  SchedulerTests.cpp  SipHashTests.cpp
src/work/: BasicWork.h  Work.h  WorkScheduler.cpp
src/xdr/: Stellar-ledger.x  Stellar-overlay.x
(+1 files in other folders)
