[workspace]
# intentionally blank

[package]
name="soroban-env-host-p21"
version="1.0.0"
edition="2021"

[lib]
crate-type=["rlib"]

[dependencies.soroban-env-host]
version = "=21.2.0"
git = "https://github.com/stellar/rs-soroban-env"
package = "soroban-env-host"
rev = "8809852dcf8489f99407a5ceac12625ee3d14693"

[profile.release]
codegen-units = 1
lto = true
