[workspace]
# intentionally blank

[package]
name="soroban-env-host-p22"
version="1.0.0"
edition="2021"

[lib]
crate-type=["rlib"]

[dependencies.soroban-env-host]
version = "=22.0.0"
git = "https://github.com/stellar/rs-soroban-env"
package = "soroban-env-host"
rev = "5ed156b7fb5dd3e46635aa0f818d5db33dfd6b6a"

[profile.release]
codegen-units = 1
lto = true
